# NMPCramp

./: CMakeLists.txt  README.md
include/: Csr.h  Csv.h  Extrapolate.h  IndexedVectors.h  IterableSet.h  LinAlg.h  LinComb.h  LmpcConstant.h  LtiMpc.h  LtvMpc.h  MmcModel.h  MmcMpc.h  MmcTrajectory.h  OrderedSet.h  Ramp.h  SdqpLmpcConstant.h  SdqpLmpcMmc.h  SdqpLmpcVarying.h  Simulate.h  Timer.h  Types.h  Utils.h
mex/: CMakeLists.txt  MexLtiMpc.c  MexLtvMpc.c  MexMmcModel.c  MexMmcMpc.c  MexSdqpLmpcMmc.c  MexUtils.c  MexUtils.h  MmcSFunction.c  MmcSFunction.h  s_function_compile.m
src/: CMakeLists.txt  Csr.c  Csv.c  Extrapolate.c  IndexedVectors.c  IterableSet.c  LinAlg.c  LinComb.c  LmpcConstant.c  LtiMpc.c  LtvMpc.c  MmcModel.c  MmcMpc.c  MmcTrajectory.c  OrderedSet.c  Ramp.c  SdqpLmpcConstant.c  SdqpLmpcMmc.c  SdqpLmpcVarying.c  Simulate.c  Timer.c
test/: CMakeLists.txt
test/data/OSQP/model4/: Q.csv  R.csv  S.csv  _Lt.csv  lt.csv  u_max.csv  u_min.csv  uref.csv  x0.csv  xref.csv  y_max.csv  y_min.csv
test/data/OSQP/model5/: C.csv  Q.csv  R.csv  S.csv  _Lt.csv  lt.csv  u_max.csv  u_min.csv  uref.csv  x0.csv  xref.csv  y_max.csv  y_min.csv
test/data/OSQP/model6/: Q.csv  R.csv  S.csv  _Lt.csv  lt.csv  u_max.csv  u_min.csv  uref.csv  x0.csv  xref.csv  y_max.csv  y_min.csv
test/data/QPramp/example1/: B.csv  S.csv  _Lt.csv  lt.csv  uref.csv  x0.csv  xref.csv
test/data/QPramp/example2/: A.csv  B.csv  C.csv  Lt.csv  Q.csv  S.csv  uref.csv  x0.csv  xref.csv
test/data/QPramp/example3/: A.csv  B.csv  C.csv  Lt.csv  Q.csv  S.csv  uref.csv  x0.csv  xref.csv
test/mex/: CMakeLists.txt  TestMexLtiMpc.m  TestMexLtvMpc.m  TestMexMmcMpc.m  TestMexSimulateMmc.m
test/scripts/: compare_csvs.py
test/src/: CMakeLists.txt  TestLmpcConstant.c  TestLmpcVarying.c  TestLtiMpc.c  TestLtvMpc.c  TestMmcMpc.c  TestSimulateMmc.c
